--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,11 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  -ms-overflow-style: none; /* 인터넷 익스플로러 */
+  scrollbar-width: none; /* 파이어폭스 */
+}
+*::-webkit-scrollbar {
+  display: none; /* 크롬, 사파리, 오페라, 엣지 */
 }
 
 html {
@@ -15,11 +21,10 @@ body {
 }
 
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  border: 4px solid gray;
+  // border: 4px solid gray;
   width: 100%;
 }
 
