--- a/src/components/Comment/index.scss
+++ b/src/components/Comment/index.scss
@@ -7,29 +7,56 @@
   flex-direction: column;
   align-items: flex-start;
 
-  & .img-box {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 2px solid $main-gray;
-    background-color: white;
-    overflow: hidden;
+  & .profile {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 8px;
 
-    & .img {
+    & .img-box {
+      margin-right: 4px;
       width: 40px;
       height: 40px;
-      background-color: lightgray;
+      border-radius: 50%;
+      border: 2px solid $main-gray;
+      background-color: white;
+      overflow: hidden;
+
+      & .img {
+        width: 40px;
+        height: 40px;
+        background-color: lightgray;
+      }
     }
+
+    & .user-name {
+      font-size: 16px;
+      font-weight: bold;
+      color: $text-sub;
+    }
+
     & .icon-type {
+      margin-right: 8px;
       font-size: 20px;
       font-weight: bold;
       color: $text-info;
     }
   }
 
+  & .icon-type {
+    margin-right: 8px;
+    font-size: 20px;
+    font-weight: bold;
+    color: $text-info;
+  }
+
   .comment-box {
     display: flex;
     flex-grow: 1;
     align-items: center;
+
+    & > p {
+      text-align: left;
+    }
   }
 }
